added get item route
