# docs/swagger.yaml
@@ -8,6 +8,8 @@ definitions:
         type: string
       mime_type:
         type: string
+      original_name:
+        type: string
       s3_key:
         type: string
       size:
@@ -297,6 +299,49 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Create an item in your vault
+      tags:
+      - Items
+  /items/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Gets an item by ID
+      parameters:
+      - description: Item ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.ItemResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httpx.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/httpx.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httpx.ErrorResponse'
+        "422":
+          description: Validation Error
+          schema:
+            $ref: '#/definitions/httpx.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httpx.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get an item from your vault
       tags:
       - Items
 securityDefinitions:
